Fix layout and whitespace issue in Ipad Pro

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,11 +363,30 @@ form .btn {
 /*--------------------------------------------------------------------------- media queries*/
 /*--------------------------------------------------------------------------- Mobile media queries*/
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) {
-   /*to push sections to the bottom of the page-fix white space*/
-    .pt-5, .py-5 {
-        padding-top: 5rem!important;
+@media only screen and (min-width: 1024px) and (max-width: 2560px) {
+
+    /*to push sections to the bottom of the page-fix white space*/
+    .contact-section .pt-5,
+    .contact-section .py-5 {
+        padding-top: 5rem !important;
     }
+
+    /*push content down to fix white space*/
+    .py-3 .form-sent-section {
+        padding-top: 5rem !important;
+        padding-bottom: 5rem !important;
+    }
+
+    /*fix image positioning*/
+    .form-sent-img figure img {
+        max-width: 50vw !important;
+        left: 50%;
+        margin-left: -50px;
+        top: 50%;
+    }
+
+
+
 }
 
 /*For 992px breakpoint in Chrome Dev Tool*/
